fixed spacing issue with loading screen

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -37,7 +37,7 @@ td, tr {
 .rotate-center {
 	-webkit-animation: rotate-center 0.6s ease-in-out infinite both;
 	        animation: rotate-center 0.6s ease-in-out infinite both;
-    width: 9%;
+    width: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -249,7 +249,7 @@ button:focus {
 /* div that contains content that will be loaded on click of a button */
 div#loading {
     text-align: center;
-    min-height: 100vh;
+    min-height: 60vh;
     margin: 10%;
 }
 
